syntax = "proto3";

package attestation_agent;

message GetEvidenceRequest {
    bytes RuntimeData = 1;
}

message GetEvidenceResponse {
    bytes Evidence = 1;
}

message GetTokenRequest {
    string TokenType = 1;
}

message GetTokenResponse {
    bytes Token = 1;
}

message ExtendRuntimeMeasurementRequest {
    repeated bytes Events = 1;
    optional uint64 RegisterIndex = 2;
}

message ExtendRuntimeMeasurementResponse {}

message InitDataPlaintext {
    bytes Content = 1;
    string Algorithm = 2; 
}

message CheckInitDataRequest {
    bytes Digest = 1;
}

message CheckInitDataResponse {}

service AttestationAgentService {
    rpc GetEvidence(GetEvidenceRequest) returns (GetEvidenceResponse) {};
    rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {};
    rpc ExtendRuntimeMeasurement(ExtendRuntimeMeasurementRequest) returns (ExtendRuntimeMeasurementResponse) {};
    rpc CheckInitData(CheckInitDataRequest) returns (CheckInitDataResponse) {};
}
