syntax = "proto3";

package api;

message GetResourceRequest {
    string ResourcePath = 1;
}

message GetResourceResponse {
    bytes Resource = 1;
}

service GetResourceService {
    rpc GetResource(GetResourceRequest) returns (GetResourceResponse) {};
}
